--- a/app.json
+++ b/app.json
@@ -13,7 +13,7 @@
 	],
 	"buildpacks" : [
 		{
-			"url" : "https://github.com/meenie/heroku-buildpack-nodejs-grunt-bower
+			"url" : "https://github.com/meenie/heroku-buildpack-nodejs-grunt-bower"
 		},
     {
       "url" : "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
