--- a/app.json
+++ b/app.json
@@ -12,7 +12,7 @@
 	],
 	"buildpacks" : [
 		{
-			"url" : "https://github.com/circuithub/heroku-buildpack-nodejs-grunt.git"
+			"url" : "https://github.com/heroku/heroku-buildpack-nodejs"
 		},
     {
       "url" : "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest"
